[gd_scene load_steps=14 format=3 uid="uid://ctjshwbcc5k7e"]

[ext_resource type="Texture2D" uid="uid://c7de284fwbcc2" path="res://Assets/Buttons/buttons.png" id="1_c53mw"]
[ext_resource type="Script" uid="uid://d0eo4ypjbx8gi" path="res://Scenes/UI/Pause/PauseMenu.gd" id="1_vupo1"]

[sub_resource type="SystemFont" id="SystemFont_iteex"]
font_names = PackedStringArray("04b 30")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_vupo1"]
font = SubResource("SystemFont_iteex")
font_size = 18
font_color = Color(0.572549, 0.356863, 0.105882, 1)
shadow_color = Color(0.145098, 0.0745098, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_vupo1"]
atlas = ExtResource("1_c53mw")
region = Rect2(43, 0, 49, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2c2e"]
atlas = ExtResource("1_c53mw")
region = Rect2(43, 34, 49, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncdt"]
atlas = ExtResource("1_c53mw")
region = Rect2(43, 17, 49, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa1bl"]
atlas = ExtResource("1_c53mw")
region = Rect2(139, 0, 71, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpb7h"]
atlas = ExtResource("1_c53mw")
region = Rect2(139, 34, 71, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsddx"]
atlas = ExtResource("1_c53mw")
region = Rect2(139, 17, 71, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_ittbr"]
atlas = ExtResource("1_c53mw")
region = Rect2(211, 2, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgpjm"]
atlas = ExtResource("1_c53mw")
region = Rect2(227, 36, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_epl6o"]
atlas = ExtResource("1_c53mw")
region = Rect2(211, 19, 15, 15)

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vupo1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"
label_settings = SubResource("LabelSettings_vupo1")

[node name="RetryButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_vupo1")
texture_pressed = SubResource("AtlasTexture_y2c2e")
texture_hover = SubResource("AtlasTexture_0ncdt")

[node name="MainMenuButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_xa1bl")
texture_pressed = SubResource("AtlasTexture_rpb7h")
texture_hover = SubResource("AtlasTexture_nsddx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BackToGameButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = SubResource("AtlasTexture_ittbr")
texture_pressed = SubResource("AtlasTexture_xgpjm")
texture_hover = SubResource("AtlasTexture_epl6o")

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/BackToGameButton" to="." method="_on_back_to_game_button_pressed"]
